<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BG">

    <LinearLayout
        android:id="@+id/button_value"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_goneMarginBottom="100dp">

        <Button
            android:id="@+id/value_100"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/money_button"
            android:text="@string/value_100"
            android:textSize="16sp"
            android:fontFamily="@font/kanit"
            android:textColor="@color/Low_contrast_text"/>
        <Button
            android:id="@+id/value_500"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/money_button"
            android:text="@string/value_500"
            android:textSize="16sp"
            android:fontFamily="@font/kanit"
            android:textColor="@color/Low_contrast_text"/>
        <Button
            android:id="@+id/value_1000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/money_button"
            android:text="@string/value_1000"
            android:textSize="16sp"
            android:fontFamily="@font/kanit"
            android:textColor="@color/Low_contrast_text"/>


    </LinearLayout>

    <Button
        android:id="@+id/check_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        android:background="@drawable/button"
        android:fontFamily="@font/kanit"
        android:text="ตรวจสอบข้อมูล"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_value"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/api_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        android:background="@drawable/button"
        android:elevation="10dp"
        android:fontFamily="@font/kanit"
        android:text="API"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_button"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/history_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        android:background="@drawable/button"
        android:elevation="10dp"
        android:fontFamily="@font/kanit"
        android:text="@string/history_header"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/api_button"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>